@@ -62,7 +62,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib comsupp.lib"
+				AdditionalDependencies="comctl32.lib"
 				OutputFile="$(OutDir)/Browser.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
@@ -141,7 +141,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib comsupp.lib"
+				AdditionalDependencies="comctl32.lib"
 				OutputFile="$(OutDir)/Browser.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
